[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/DeckBuilder/Cardnum/CardnumPopup.gd" type="Script" id=1]
[ext_resource path="res://scenes/DeckBuilder/Cardnum/CardnumSection.tscn" type="PackedScene" id=2]

[node name="CardnumPopup" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.0
margin_top = -428.0
margin_right = 313.0
margin_bottom = 447.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 598.0
margin_bottom = 827.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 578.0
margin_bottom = 401.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resources" parent="MarginContainer/VBoxContainer/TopRow" instance=ExtResource( 2 )]
margin_right = 190.0
margin_bottom = 401.0

[node name="Hazards" parent="MarginContainer/VBoxContainer/TopRow" instance=ExtResource( 2 )]
margin_left = 194.0
margin_right = 384.0
margin_bottom = 401.0

[node name="Sideboard" parent="MarginContainer/VBoxContainer/TopRow" instance=ExtResource( 2 )]
margin_left = 388.0
margin_right = 578.0
margin_bottom = 401.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 578.0
margin_bottom = 807.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" parent="MarginContainer/VBoxContainer/BottomRow" instance=ExtResource( 2 )]
margin_right = 190.0
margin_bottom = 402.0

[node name="Pool" parent="MarginContainer/VBoxContainer/BottomRow" instance=ExtResource( 2 )]
margin_left = 194.0
margin_right = 384.0
margin_bottom = 402.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BottomRow"]
margin_left = 388.0
margin_right = 578.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FW-DC-SB" parent="MarginContainer/VBoxContainer/BottomRow/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 190.0
margin_bottom = 199.0
size_flags_vertical = 3

[node name="Sites" parent="MarginContainer/VBoxContainer/BottomRow/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 203.0
margin_right = 190.0
margin_bottom = 402.0
size_flags_vertical = 3
